Fixed weird spacing in wrap-image-text shortcode and made separate shortcode to stack flex boxes on top of each other on mobile

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -180,21 +180,6 @@ a:hover {
   padding-top: 75%; /* 4:3 Aspect Ratio (divide 3 by 4 = 0.75) */
 }
 
-figure {
-  padding: 4px;
-  margin: auto;
-}
-
-figcaption p {
-  font-style: italic;
-  font-size: 10px;
-  padding: 2px;
-  position: absolute;
-  bottom: 8px;
-  right: 16px;
-  color: #999999;
-}
-
 .grid-container {
 }
 
